--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -15,8 +15,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Inorder to analyse we require a couple of libraries.</p>"
+    "<p>Inorder to analyse and do some machine learning we require to import a couple of libraries.</p>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data analysis \n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import random as rnd\n",
+    "\n",
+    "# ML\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import Perceptron\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.svm import SVC\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
