Not yet done. Tested 5 classifiers

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/muoki/.local/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "# data analysis \n",
     "import numpy as np\n",
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +230,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +614,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +874,7 @@
        "19        C  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +1003,7 @@
        "4           0           0  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1132,7 @@
        "4       3    Mr.    1  35.0           0           0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1168,29 +1177,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Master.',\n",
-       "  'Jonkheer.',\n",
-       "  'Lady.',\n",
-       "  'Sir.',\n",
-       "  'Don.',\n",
-       "  'Dr.',\n",
-       "  'Mme.',\n",
+       "[['Don.',\n",
+       "  'Master.',\n",
        "  'Major.',\n",
-       "  'Mrs.',\n",
-       "  'Rev.',\n",
-       "  'Mr.',\n",
-       "  'Ms.',\n",
-       "  'Mlle.',\n",
-       "  'Capt.',\n",
-       "  'the',\n",
        "  'Col.',\n",
-       "  'Miss.'],\n",
+       "  'Sir.',\n",
+       "  'Jonkheer.',\n",
+       "  'Capt.',\n",
+       "  'Mlle.',\n",
+       "  'Dr.',\n",
+       "  'Miss.',\n",
+       "  'Lady.',\n",
+       "  'Ms.',\n",
+       "  'Mr.',\n",
+       "  'Mrs.',\n",
+       "  'Mme.',\n",
+       "  'Rev.',\n",
+       "  'the'],\n",
        " Name\n",
        " Capt.        70.000000\n",
        " Col.         58.000000\n",
@@ -1212,7 +1221,7 @@
        " Name: Age, dtype: float64]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1240,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1359,7 @@
        "4       3    1  0.0           0           0"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1478,13 +1487,6 @@
    "source": [
     "<p>From the 5 classifiers used we can see that Random Forest has the better result of the 5.</p>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
